[package]
name = "mcps-proxy"
version = "0.8.0"
edition.workspace = true
license.workspace = true
authors.workspace = true
description = "MCP-S server-side sidecar (stdio-first): verify-before-dispatch, response signing, verified-context propagation."

[dependencies]
# MCPS-015/016: verify-before-dispatch + verified-context propagation.
# MCPS-023: opt-in Phase 5 policy enforcement (mcps-policy).
# MCPS-025 (ADR-MCPS-014): Rust-native TLS termination + mTLS — rustls (ring),
# rustls-pki-types PemObject (cert/key loading), x509-parser (verified client
# identity). Blocking std::net, NO async runtime.
mcps-core = { path = "../mcps-core" }
mcps-policy = { path = "../mcps-policy" }
serde_json = { workspace = true }
rustls = { workspace = true }
rustls-pki-types = { workspace = true }
x509-parser = { workspace = true }
thiserror = { workspace = true }
# MCPS-037 (ADR-MCPS-016): Unix setrlimit(2) for inner-server resource hardening.
libc = { workspace = true }
# MCPS-076 (audit gap G-3): wrap raw-seed-bearing temporaries in zeroize::Zeroizing
# in `key_source` so the private signing seed is scrubbed on drop.
zeroize = { workspace = true }
# Phase 7 external backends (ADR-MCPS-019). Declared NON-optional at the cargo
# manifest level so the isolated `@crates_mcps` crate_universe hub EXPOSES their
# Bazel targets (crate_universe drops optional, feature-gated deps from the
# resolved graph). The adapter CODE stays behind the `#[cfg(feature = ...)]`
# flags below, and — crucially — the DEFAULT `:mcps_proxy` Bazel target does NOT
# list these in its `deps`, so the production (Bazel) closure stays lean
# (ADR-MCPS-018); only `:mcps_proxy_ext` and its tests link them.
cryptoki-sys = { workspace = true }
redis = { workspace = true }
# ureq is the blocking HTTP client for both the OCSP path (plain HTTP) and the AWS
# KMS signer (HTTPS). The `tls` feature (rustls + webpki-roots) is what gives the
# KMS adapter HTTPS; rustls/ring is already in the closure, so this reuses it and
# pulls NO async runtime. Declared with the feature here (not in the workspace
# default) so the OCSP-only closure is unchanged when `aws_kms_keysource` is off.
ureq = { workspace = true, features = ["tls"] }
# ADR-MCPS-028: HMAC-SHA256 for the AWS SigV4 signer. NON-optional (crate_universe
# visibility); the SigV4/KMS code is behind `#[cfg(feature = "aws_kms_keysource")]`.
hmac = { workspace = true }
# ADR-MCPS-028: KMS wire-encodes the message + signature in STANDARD base64 (mcps
# uses base64url elsewhere). Already in the lock via mcps-core, so this adds no crate.
base64 = { workspace = true }
x509-ocsp = { workspace = true }
der = { workspace = true }
spki = { workspace = true }
x509-cert = { workspace = true }
sha2 = { workspace = true }
# #4063 (MCPS-088): fresh per-request OCSP Nonce drawn from the OS CSPRNG. Already
# a workspace dependency (resolved + Bazel-addressable via mcps-host); declaring it
# here adds NO new crate to the lock.
getrandom = { workspace = true }
# #4063 (MCPS-088): asn1-rs BitString feeds x509-parser's `verify_signature` in the
# responder-signature path. Declared NON-optional so the `@crates_mcps` hub EXPOSES
# its Bazel target (crate_universe drops optional deps); the code that uses it is
# in the `online_ocsp` module, linked by the `:mcps_proxy_ext` flavor. Already
# resolved transitively via x509-parser, so this adds no new crate to the lock.
asn1-rs = { workspace = true }

# #4039: Linux kernel sandbox crates. Target-gated (NOT feature-gated): present in
# the dependency graph ONLY on Linux, so the Mac dev build never compiles or links
# them. The enforcement code is behind #[cfg(target_os = "linux")].
[target.'cfg(target_os = "linux")'.dependencies]
landlock = { workspace = true }
seccompiler = { workspace = true }

[features]
# MCPS-076 (audit gap G-3): the environment-variable key source is DEV/CI-ONLY and
# is gated behind this NON-DEFAULT feature. In a default (production) build the
# `EnvKeySource` type is NOT compiled at all and `--key-source env` fails closed at
# construction. Build with `--features dev_env_key_source` ONLY for local dev/CI.
default = []
dev_env_key_source = []
# MCPS-079 (audit gap G-6, "test of the tests" / fault injection). The
# `fault_accept_any_client` feature is a DELIBERATE BREAK of the CLIENT-
# authentication control on the proxy's server side — the symmetric mirror of
# mcps-transport's `fault_accept_any_server`. It is used ONLY by the periodic/
# pre-release fault-injection harness to prove the proxy's client-cert-rejection
# guards (the more important boundary: the proxy guards the inner) are
# load-bearing. It is OFF by default, never enabled by any production target, and
# never enabled by the default `bazel test //...`. When OFF the code is identical
# to the verifying build (the faulted path is behind `#[cfg(feature = ...)]`).
fault_accept_any_client = []
# Phase 7 external backends — each is a pure code-`cfg` flag (OFF by default).
# The backend crates are always available (declared non-optional above for
# crate_universe visibility); these flags toggle ONLY the adapter code, and the
# default `:mcps_proxy` Bazel target neither sets the flag nor links the crates.
# #4034 PKCS#11-backed KeySource (response-signing key never leaves the token).
pkcs11_keysource = []
# ADR-MCPS-028 §B: native AWS KMS Ed25519 response signer. Blocking HTTPS via ureq
# + an audited minimal SigV4 signer — intentionally NO `aws-sdk-kms`/tokio/Smithy
# (ADR-MCPS-018 lean-sync firewall). Narrow surface: only KMS `GetPublicKey` +
# `Sign` (ED25519_SHA_512 / MessageType RAW). OFF by default; the default
# `:mcps_proxy` Bazel target neither sets the flag nor links the adapter.
aws_kms_keysource = []
# ADR-MCPS-028 §C: native GCP Cloud KMS Ed25519 response signer. Blocking HTTPS via
# ureq + OAuth2 bearer (operator token or metadata-server workload identity) — NO
# google-cloud SDK/tokio. Narrow surface: only getPublicKey + asymmetricSign over an
# EC_SIGN_ED25519 key. Reuses the same crates as aws_kms_keysource; OFF by default.
gcp_kms_keysource = []
# #4028 Redis-backed shared atomic ReplayCache (horizontal-scale replay safety).
redis_replay = []
# #69 (epic #68 v0.4 Axis 1): etcd-backed CP / LINEARIZABLE shared atomic
# ReplayCache. Blocking HTTPS/HTTP via ureq over etcd's v3 JSON gateway
# (lease/grant + kv/txn put-if-absent-under-lease) — intentionally NO
# etcd-client/tonic/tokio (ADR-MCPS-018 lean-sync firewall). Reuses ureq /
# serde_json / base64, already in the closure; OFF by default, so the default
# `:mcps_proxy` Bazel target neither sets the flag nor links any new crate.
cpstore_etcd = []
# #4030 online OCSP / CRL-distribution-point client-cert revocation.
# #4063 (MCPS-088, closes #4030): this feature also compiles the full RFC 6960
# §3.2 responder-SIGNATURE + CertID + responder-id + freshness + nonce trust
# chain. The `ring`-backed, algorithm-agnostic RSA+ECDSA verifier
# (`x509-parser/verify`) is enabled unconditionally at the workspace level, so it
# is part of THIS feature's module — `online_ocsp` + `--client-ocsp require`
# performs real verification and can never admit on an unverified signature.
online_ocsp = []

[dev-dependencies]
# In-process test cert generation for the mTLS round-trip tests.
rcgen = { workspace = true }
# Mints the signed OCSP fixtures in the `online_ocsp` module's in-tree tests
# (the Bazel ocsp test target wires this same crate); a dev-dep so the ocsp unit
# tests build + run under `cargo test --features online_ocsp`, not only Bazel.
ed25519-dalek = { workspace = true }
# The proxy's integration tests drive the host-side signer end to end. They use
# the deterministic `FixedClock` / `SeededNonceSource` fixtures, which mcps-host
# compiles only under its `test-fixtures` feature (audit #81); enable it here as a
# DEV-dependency feature so it never reaches the production proxy closure.
mcps-host = { path = "../mcps-host", features = ["test-fixtures"] }
# The draft-02 serving test signs a real draft-02 request via the client seam.
mcps-client-core = { path = "../mcps-client-core" }
# Resolve child-process binary paths under Bazel runfiles OR plain cargo.
mcps-test-paths = { path = "../mcps-test-paths" }

[lib]
name = "mcps_proxy"
path = "src/lib.rs"

[[bin]]
name = "mcps-proxy"
path = "src/main.rs"

# A fixture: a plain MCP-S-unaware inner MCP server used by full_stack_test as a
# child process. In Bazel this is a separate `nt_rust_binary` (`:echo_inner`)
# delivered via runfiles; under Cargo we surface it as a `[[bin]]` so the test
# can spawn it via the mcps_test_paths fallback at `target/<profile>/echo-inner`.
[[bin]]
name = "echo-inner"
path = "tests/fixtures/echo_inner.rs"
